--- a/benches/criterion/Cargo.toml
+++ b/benches/criterion/Cargo.toml
@@ -28,6 +28,7 @@ divan = "0.1.14"
 [[bin]]
 name = "replication_profiling"
 path = "src/replication_profiling.rs"
+doc = false
 
 [[bench]]
 name = "replication"
