--- a/examples/distributed_authority/Cargo.toml
+++ b/examples/distributed_authority/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "distributed_authority_new"
+name = "distributed_authority"
 version = "0.1.0"
 authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
 edition = "2021"
@@ -32,6 +32,10 @@ udp = [
   "lightyear_examples_common/udp",
   "lightyear/udp",
 ]
+
+[[bin]]
+name = "distributed_authority"
+doc = false
 
 [dependencies]
 lightyear = { "workspace" = true, features = [
