--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -30,21 +30,21 @@ std = [
 
 [dependencies]
 lightyear = { workspace = true, features = [
-    "client", "server", "crossbeam", "netcode", "input_native", "leafwing", "interpolation", "prediction", "replication"
+    "client", "server", "crossbeam", "netcode", "input_native", "leafwing", "interpolation", "prediction", "replication",
 ]}
 lightyear_macros.workspace = true
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_transport = { workspace = true, features = ["client", "server"] }
-lightyear_core.workspace = true
+lightyear_core = { workspace = true, features = ["test_utils"] }
 lightyear_netcode = { workspace = true, features = ["client", "server", "test_utils"] }
 lightyear_messages = { workspace = true, features = ["client", "server"] }
 lightyear_replication =  { workspace = true, features = ["client", "server", "test_utils"]}
-lightyear_crossbeam = { workspace = true, features = ["test_utils"]}
+lightyear_crossbeam.workspace = true
 lightyear_connection = { workspace = true, features = ["client", "server"]}
 lightyear_sync = { workspace = true, features = ["client", "server"] }
 lightyear_prediction = { workspace = true, features = ["test_utils"] }
-lightyear_link = { workspace = true, features = ["test_utils"]}
+lightyear_link = { workspace = true, features = ["test_utils"] }
 
 # inputs
 leafwing-input-manager.workspace = true
