--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,8 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
+      - name: Install packages
+        run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config libusb-1.0-0-dev libftdi1-dev libudev-dev;
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
@@ -33,12 +35,13 @@ jobs:
           cargo fmt --all --check
       - name: Clippy lightyear
         # exclude avian_3d_character to only use lightyear_avian/2d features
-        run: cargo clippy --workspace --exclude=compiletime --exclude=avian_3d_character --exclude=launcher --exclude=delta_compression --exclude=distributed_authority --no-deps -- -D warnings -A clippy::needless_lifetimes
+        run: cargo clippy --features=lightyear_core/not_mock --workspace --exclude=compiletime --exclude=avian_3d_character --exclude=launcher --exclude=delta_compression --exclude=distributed_authority --no-deps -- -D warnings -A clippy::needless_lifetimes
 
   docs:
     name: Doc
     runs-on: ubuntu-latest
     steps:
+
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
@@ -52,7 +55,7 @@ jobs:
           RUSTFLAGS: --cfg docsrs_dep
           RUSTDOCFLAGS: --cfg=docsrs --generate-link-to-definition
         # exclude avian_3d_character to only use lightyear_avian/2d features
-        run: cargo doc --locked --workspace --exclude=avian_3d_character --document-private-items --no-deps --keep-going
+        run: cargo +nightly doc --features=lightyear_core/not_mock --workspace --exclude=avian_3d_character --document-private-items --no-deps --keep-going
 
   test:
     name: Test
@@ -77,7 +80,7 @@ jobs:
         run: cargo install cargo-tarpaulin
 
       - name: Test
-        run: cargo tarpaulin --locked -p lightyear_tests --engine llvm --out lcov
+        run: cargo tarpaulin --locked -p lightyear_tests --test-threads=1 --engine llvm --out lcov
 
       - name: Upload code coverage results
         if: github.actor != 'dependabot[bot]'
