--- a/lightyear_aeronet/Cargo.toml
+++ b/lightyear_aeronet/Cargo.toml
@@ -25,3 +25,7 @@ bevy.workspace = true
 
 [lints]
 workspace = true
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
