--- a/lightyear_link/Cargo.toml
+++ b/lightyear_link/Cargo.toml
@@ -15,7 +15,7 @@ std = [
     "bytes/std",
     "serde/std",
 ]
-test_utils = ["dep:mock_instant"]
+test_utils = []
 
 [dependencies]
 lightyear_core.workspace = true
@@ -31,9 +31,6 @@ bytes.workspace = true
 
 # bevy
 bevy.workspace = true
-
-# test
-mock_instant = { workspace = true, optional = true}
 
 [lints]
 workspace = true
