--- a/lightyear_netcode/Cargo.toml
+++ b/lightyear_netcode/Cargo.toml
@@ -26,7 +26,7 @@ std = [
 ]
 client = ["lightyear_connection/client"]
 server = ["lightyear_connection/server"]
-test_utils = ["lightyear_link/test_utils"]
+test_utils = []
 trace = []
 metrics = []
 
