--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -202,5 +202,5 @@ wasm-bindgen = { workspace = true, optional = true }
 leafwing-input-manager.workspace = true
 
 [package.metadata.docs.rs]
-rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
+rustdoc-args = ["-Zunstable-options"]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
