--- a/Cargo.toml
+++ b/Cargo.toml
@@ -207,6 +207,8 @@ egui_extras = "0.31"
 [workspace.lints.rust]
 dead_code = "allow"
 unused_variables = "allow"
+# enable on nightly
+# mismatched_lifetime_syntaxes = "allow"
 
 [workspace.lints.clippy]
 type_complexity = "allow"
