--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,7 +62,7 @@ jobs:
         env:
           # needs to be in sync with [package.metadata.docs.rs]
           RUSTFLAGS: --cfg docsrs_dep -A mismatched_lifetime_syntaxes
-          RUSTDOCFLAGS: --cfg=docsrs --generate-link-to-definition
+          RUSTDOCFLAGS: --cfg=docsrs
         # exclude avian_3d_character to only use lightyear_avian/2d features
         run: cargo +nightly doc --features=lightyear_core/not_mock --workspace --exclude=avian_3d_character --document-private-items --no-deps --keep-going
 
