--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     - id: docs
       name: docs
       description: Build the documentation to ensure there are no errors
-      entry: env RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --features=lightyear_core/not_mock --workspace --exclude=avian_3d_character --document-private-items --no-deps --keep-going
+      entry: cargo doc --features=lightyear_core/not_mock --workspace --exclude=avian_3d_character --document-private-items --no-deps --keep-going
       types: [rust]
       language: system
       pass_filenames: false
