--- a/lightyear_link/Cargo.toml
+++ b/lightyear_link/Cargo.toml
@@ -9,12 +9,7 @@ description = "IO primitives for the lightyear networking library"
 repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
-default = ["std"]
-std = [
-    "bevy/std",
-    "bytes/std",
-    "serde/std",
-]
+default = []
 test_utils = []
 
 [dependencies]
@@ -24,13 +19,12 @@ lightyear_utils.workspace = true
 # utils
 rand.workspace = true
 tracing.workspace = true
-
-# serde
-serde.workspace = true
 bytes.workspace = true
 
 # bevy
-bevy.workspace = true
+bevy_app.workspace = true
+bevy_ecs.workspace = true
+bevy_reflect.workspace = true
 
 [lints]
 workspace = true
