--- a/lightyear_udp/Cargo.toml
+++ b/lightyear_udp/Cargo.toml
@@ -9,19 +9,21 @@ description = "IO primitives for the lightyear networking library"
 repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
-default = ["std"]
-std = [
-    "lightyear_link/std"
-]
-server = []
+default = []
+server = ["bevy_platform"]
 
 [dependencies]
-aeronet_io.workspace = true
 lightyear_core.workspace = true
 lightyear_link.workspace = true
 
+aeronet_io.workspace = true
+
+tracing.workspace = true
+
 # bevy
-bevy.workspace = true
+bevy_app.workspace = true
+bevy_ecs = { workspace = true, features = ["std"] }
+bevy_platform = { workspace = true, optional = true }
 
 # utils
 bytes.workspace = true
