--- a/lightyear_aeronet/Cargo.toml
+++ b/lightyear_aeronet/Cargo.toml
@@ -9,19 +9,20 @@ description = "IO primitives for the lightyear networking library"
 repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
-default = ["std"]
-std = [
-    "bevy/std",
-]
-
+default = []
 test_utils = []
 
 [dependencies]
-aeronet_io.workspace = true
 lightyear_link.workspace = true
 
+aeronet_io.workspace = true
+
+tracing.workspace = true
+
 # bevy
-bevy.workspace = true
+bevy_app.workspace = true
+bevy_ecs.workspace = true
+bevy_reflect.workspace = true
 
 [lints]
 workspace = true
