--- a/lightyear_connection/Cargo.toml
+++ b/lightyear_connection/Cargo.toml
@@ -9,12 +9,7 @@ description = "Connection handling for the lightyear networking library"
 repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
-default = ["std"]
-std = [
-    "bytes/std",
-    "lightyear_link/std",
-    "lightyear_serde/std"
-]
+default = []
 client = []
 server = []
 
@@ -25,8 +20,10 @@ lightyear_link.workspace = true
 lightyear_serde.workspace = true
 
 # bevy
-bevy.workspace = true
-
+bevy_app.workspace = true
+bevy_ecs.workspace = true
+bevy_platform.workspace = true
+bevy_reflect.workspace = true
 
 # utils
 bytes.workspace = true
