--- a/benches/compiletime/Cargo.toml
+++ b/benches/compiletime/Cargo.toml
@@ -8,8 +8,9 @@ rust-version.workspace = true
 license.workspace = true
 
 [dependencies]
-lightyear.workspace = true
+lightyear = { workspace = true, features = ["replication"]}
 bevy.workspace = true
+serde.workspace = true
 
 [lints]
 workspace = true
