Add `std` features for `lightyear_interpolation`

--- a/lightyear_interpolation/Cargo.toml
+++ b/lightyear_interpolation/Cargo.toml
@@ -9,8 +9,9 @@ description = "IO primitives for the lightyear networking library"
 repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
-default = []
-metrics = ["dep:metrics"]
+default = ["std"]
+std = ["lightyear_replication/std"]
+metrics = ["dep:metrics", "std"]
 
 [dependencies]
 lightyear_utils.workspace = true
